--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 
 html {
     font-family: Verdana, Geneva, Tahoma, sans-serif ;
+    display: inline;
 } 
 ul {
     list-style-type: none !important;
@@ -24,7 +25,9 @@ ul {
 .text-center {
     text-align: center !important;
 }
-
+.clear {
+    clear: both;
+}
 .row {
   margin-left: -8px;
   margin-right: -8px;
@@ -44,6 +47,12 @@ ul {
 
 .col-3 {
     width: 30%;
+}
+.col-15 {
+    width: 15%;
+}
+.col-75 {
+    width: 75%;
 }
 .col-4 {
     width: 25%;
@@ -129,7 +138,7 @@ body {
 #slider {
     width: 100%;
     margin-top: 60px;
-    padding-top: 45%;
+    padding-top: 50%;
     background: url('../File-anh.img/Anh-slider.jpg') top center / cover no-repeat;
     position: relative;
 }
@@ -146,6 +155,143 @@ body {
     color: var(--text-color);
 }
 /* End: Slider */
+/* Content for destina */
+.content-destina {
+    display: inline-block;
+    width: 100%;
+    background-color: rgba(127, 158, 184, 0.219);
+    margin-top: 50px;
+}
+.content-home {
+    display: inline-block;
+    width: 100%;
+    background-color: rgba(77, 101, 121, 0.219);
+}
+.content-destina .destina-heading {
+    padding: 40px 0 0 37px;
+}
+.content-destina .img-destina {
+    width: 100%;
+    padding: 20px;
+    border-radius: 30px;
+}
+.content-home .img-home {
+    width: 100%;
+    padding: 20px;
+    border-radius: 30px;
+}
+.content-home .img-home:hover {
+    opacity: 0.8;
+}
+.content-home .heading-para {
+    padding: 0 25px 25px 25px;
+}
+.content-destina .img-destina:hover {
+    opacity: 0.8;
+}
+.content-destina .heading-para {
+    padding: 0 25px 25px 25px;
+}
+.toi-diem-den {
+    padding: 30px;
+    text-align: center;
+}
+.toi-diem-den a {
+    color: black;
+    line-height: 40px;
+}
+/* Content for Service */
+#content-service {
+    display: inline-block;
+    margin-top: 50px;
+    padding: 30px;
+    position: relative;
+}
+
+#content-service .service-heading {
+    margin-bottom: 20px;
+}
+#content-service .box-service {
+    display: inline-block;
+    border: 2px solid rgb(181, 190, 178);
+    padding: 15px;
+    margin: 15px 0;
+    position: relative;
+}
+#content-service .img-service {
+    width: 100%;
+    padding: 10px;
+    border-radius: 20px;
+}
+.inf-service {
+    padding-top: 8px;
+}
+.inf-service h2 {
+    font-size: 24px;
+    color: rgb(25, 25, 126);
+}
+.inf-service h3 {
+    font-size: 14px;
+    opacity: 0.7;
+}
+.inf-service p {
+    font-size: 14px;
+    padding: 10px 0;
+}
+.box-service .buy-btn{
+    color: rgb(255, 255, 255);
+    background-color: rgb(59, 75, 218);
+    line-height: 20px;
+    padding: 5px 20px;
+    font-weight: 700;
+    border: none;
+    border-radius: 7px;
+    display: inline;
+}
+ /* content foods */
+#content-foods {
+    margin-top: 70px;
+    padding: 25px;
+}
+#content-foods h1 {
+    padding-bottom: 15px;
+}
+#content-foods h2 {
+    padding: 30px 0;
+}
+#content-foods p {
+    padding: 10px 0;
+}
+#content-foods img {
+    width: 100%;
+    padding: 25px;
+}
+/* content for cutural */
+.content-cutural {
+    margin-top: 50px;
+    padding: 10px 35px;
+}
+.content-cutural h1 {
+    padding: 20px 0;
+}
+.content-cutural h3 {
+    padding: 10px 0;
+}
+.content-cutural p {
+    padding: 5px 0;
+}
+.content-cutural img {
+    width: 100%;
+    margin: 15px;
+    border-radius: 25px;
+    box-shadow: 1px 10px 15px 8px #777;
+
+}
+.content-cutural .img-title {
+    text-align: center;
+    opacity: 0.7;
+    color: rgb(206, 84, 28);
+}
 /* Footer */
 .footer-contact {
     display: block;
@@ -179,7 +325,7 @@ body {
 .footer-nav {
     background: url('../File-anh.img/Anh-footer.jpg') top center / cover no-repeat;
     width: 100%;
-    padding-top: 40%;
+    padding-top: 30%;
     opacity: 0.8;
 }
 /* End: Footer */
@@ -275,6 +421,22 @@ body {
     .close-icon:hover {
         color: red;
     }
+    .content-destina .destina-item {
+        float: none;
+        width: 100%;
+    }
+    .content-home .heading-para {
+        display: none;
+    }
+    /* content service */
+    .box-service .box-img-service {
+        float: none;
+        width: 100%;
+    }
+    .inf-service {
+        padding-left: 10px;
+    }
+   
     #slider .text-slider {
         display: none;
     }
